log/build_2026-05-09_15-12-04/dxl_wt_openarm_leader/stdout_stderr.log
Consolidate compiler generated dependencies of target read_write_wt_position_node
[ 33%] Built target pub_position_node
[ 66%] Built target pub_current_node
[ 83%] Building CXX object CMakeFiles/read_write_wt_position_node.dir/src/read_write_wt_position_node.cpp.o
/home/tky/workspace/openarm_ws/src/dxl_wt_openarm_leader/src/read_write_wt_position_node.cpp:134:6: error: no declaration matches ‘void ReadWriteWTNode::motion_compensation()’
  134 | void ReadWriteWTNode::motion_compensation()
      |      ^~~~~~~~~~~~~~~
/home/tky/workspace/openarm_ws/src/dxl_wt_openarm_leader/src/read_write_wt_position_node.cpp:134:6: note: no functions named ‘void ReadWriteWTNode::motion_compensation()’
In file included from /home/tky/workspace/openarm_ws/src/dxl_wt_openarm_leader/src/read_write_wt_position_node.cpp:47:
/home/tky/workspace/openarm_ws/src/dxl_wt_openarm_leader/include/read_write_wt_position_node.hpp:35:7: note: ‘class ReadWriteWTNode’ defined here
   35 | class ReadWriteWTNode : public rclcpp::Node
      |       ^~~~~~~~~~~~~~~
/home/tky/workspace/openarm_ws/src/dxl_wt_openarm_leader/src/read_write_wt_position_node.cpp: In member function ‘void ReadWriteWTNode::read_present_position()’:
/home/tky/workspace/openarm_ws/src/dxl_wt_openarm_leader/src/read_write_wt_position_node.cpp:257:3: error: ‘motion_compensation’ was not declared in this scope
  257 |   motion_compensation();
      |   ^~~~~~~~~~~~~~~~~~~
gmake[2]: *** [CMakeFiles/read_write_wt_position_node.dir/build.make:76: CMakeFiles/read_write_wt_position_node.dir/src/read_write_wt_position_node.cpp.o] Error 1
gmake[1]: *** [CMakeFiles/Makefile2:141: CMakeFiles/read_write_wt_position_node.dir/all] Error 2
gmake: *** [Makefile:146: all] Error 2
